Fixed issue where opening the sidebar while in project page overflows the navigation bar

--- a/collaborative/src/components/App/App.module.css
+++ b/collaborative/src/components/App/App.module.css
@@ -1,9 +1,12 @@
 .WorkSpace {
   display: flex;
   flex: 0 0 100%;
+  max-width: 100wh;
+  overflow: hidden;
 }
 
 .WorkSpace_Content {
+  overflow-x: auto;
   max-height: 100vh;
   display: flex;
   flex-direction: column;
